[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "inventree-ipn-generator"
version = "0.1"
description = "InvenTree plugin to autogen ipn"
authors = [
    {name = "Nichlas Walsøe", email = "lavissawow@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"

[project.urls]
"Homepage" = "https://github.com/LavissaWoW/inventree-ipn-generator"

[project.entry-points."inventree_plugins"]
IPNGenerator = 'generator:AutoGenIPNPlugin'