[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "inventree-ipn-generator"
version = "0.1"
description = "InvenTree plugin to automatically generate and assign Internal Part Numbers to parts"
authors = [
    {name = "Nichlas Walsøe", email = "lavissawow@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/LavissaWoW/inventree-ipn-generator"

[project.entry-points."inventree_plugins"]
IPNGenerator = 'ipn_generator.generator:AutoGenIPNPlugin'

[tool.ruff.lint]
ignore = [
    "E501",
    "W605"
]

[tool.flake8]
ignore = [
    "E501",
    "W605"
]
